@@ -3354,9 +3354,9 @@ printed readably.</para>
 <listitem><para>If you really need that function, you might define it
     like this:
 <programlisting>
-(defun user-homedir-pathname (&amp;optional host)
+(defun user-homedir-pathname (&optional-amp; host)
   (declare (ignore host))
-  (or (system::getenv "HOME") "\\"))
+  (or (&getenv; "HOME") "\\"))
 </programlisting></para></listitem></varlistentry>
 <!-- #endif -->
 
@@ -4736,12 +4736,12 @@ effects when being loaded, this is important as well.
  the most recent stack frame but can be moved using the debugger commands
  <command>Up</command> and <command>Down</command>.</para>
 
-<para>Evaluation of forms in a break loop occurs in the lexical environment
- of the current stack frame but in the dynamic environment of the
- debugger's caller.  This means that to inspect or modify a lexical
- variable all you have to do is to move to the current stack frame just
- below the frame that corresponds to the form or the function call that
- binds that variable.</para>
+<para>Evaluation of forms in a break loop occurs in the lexical
+ environment of the current stack frame but in the dynamic environment
+ of the debugger's caller.  This means that to inspect or modify a
+ lexical variable all you have to do is to move to the current stack
+ frame just below the frame that corresponds to the form or the function
+ call that binds that variable.</para>
 
 <para>There is a current "stack mode" which defines in how much
  detail the stack is shown by the stack related debugger commands.</para>
