@@ -1,3 +1,8 @@
+2002-07-16  Sam Steingold  <sds@gnu.org>
+
+	* misc.d (GETENV): return all the environment as an alist when
+	the argument is NIL
+
 2002-07-15  Bruno Haible  <bruno@clisp.org>
 
 	* unix.d (fstatfs): Remove unused declaration.
